--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.48MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇬🇧 英国-228.8KB/s(Youtube:不良林), server: 152.89.210.105, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇸🇬 新加坡-2.22MB/s(Youtube:不良林), server: 129.226.216.121, port: 49381, type: vmess, uuid: 2f6d0f82-80c4-42ed-fd46-c76e7cc81de0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-23.05MB/s(Youtube:不良林), server: mshk1.369boy.com, port: 10501, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: mshk1.369boy.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.88MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇯🇵 日本-18.36MB/s(Youtube:不良林), server: vpn.16vpn.top, port: 80, type: vmess, uuid: c01a6b53-df1d-44af-98d8-4f557ab1f444, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: vpn.16vpn.top}}
-  - {name: 🇺🇸 美国-4.67MB/s(Youtube:不良林), server: 150.230.45.234, port: 17191, type: vmess, uuid: 6db13551-262a-4b81-f46b-f8621ee637c2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: fr1t.moonfree.top, port: 8443, type: vmess, uuid: 6e9eeae6c3d1439e9f7a213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: fr1t.moonfree.top}}
-  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: liumin.cf, port: 443, type: vmess, uuid: 5a6e82d9-7c95-17a0-a503-bca5806bd6f7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ddrkvideovws, ws-headers: {Host: liumin.cf}}
-  - {name: 🇸🇬 新加坡-2.42MB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.35MB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇭🇰 香港-1.44MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.13MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: usa003.369boy.com, port: 13011, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa003.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: 150.230.45.234, port: 17191, type: vmess, uuid: 6db13551-262a-4b81-f46b-f8621ee637c2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: fr1t.moonfree.top, port: 8443, type: vmess, uuid: 6e9eeae6c3d1439e9f7a213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: fr1t.moonfree.top}}
+  - {name: 🇰🇷 韩国-3.53MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.01MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
-      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
