--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-3.35MB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇭🇰 香港-1.44MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.13MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: usa003.369boy.com, port: 13011, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa003.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: 150.230.45.234, port: 17191, type: vmess, uuid: 6db13551-262a-4b81-f46b-f8621ee637c2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: fr1t.moonfree.top, port: 8443, type: vmess, uuid: 6e9eeae6c3d1439e9f7a213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: fr1t.moonfree.top}}
-  - {name: 🇰🇷 韩国-3.53MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.01MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-14.12MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-483.2KB/s(Youtube:不良林), server: 134.195.196.231, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇦 加拿大-2.15MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.50MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.75MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-483.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-483.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-483.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-483.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-483.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-483.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-483.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
