--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇬🇧 英国-2.08MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 乌克兰-666.9KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: kirakirasevennine.com, port: 443, type: vmess, uuid: 67068812-0f6c-437e-ab13-f480f23bf004, alterId: 13, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /9f21/, ws-headers: {Host: kirakirasevennine.com}}
-  - {name: 🇯🇵 日本-2.21MB/s(Youtube:不良林), server: 150.230.4.136, port: 11151, type: vmess, uuid: 18ef8b86-5dfe-48a9-b4e4-b5f595f7e555, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.08MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 134.195.196.231, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 134.195.196.231, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-2.22MB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 134.195.196.231, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-2.30MB/s(Youtube:不良林), server: 134.195.196.231, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-2.45MB/s(Youtube:不良林), server: 134.195.196.231, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-2.73MB/s(Youtube:不良林), server: 134.195.196.231, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 乌克兰-666.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 乌克兰-666.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 乌克兰-666.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 乌克兰-666.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 乌克兰-666.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 乌克兰-666.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 乌克兰-666.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.22MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.73MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
